# byte_slurper

./: .rustfmt.toml  Cargo.toml  README.md  build_on_guix.sh  spec_payload.pcap
benches/: benches.rs  payload_to_spectra.rs
src/: args.rs  capture.rs  complex.rs  exfil.rs  f_engine.rs  lib.rs  main.rs  monitoring.rs
