[package]
edition = "2021"
name = "byte_slurper"
version = "0.1.0"

[dependencies]
byte-slice-cast = "1.2"
chrono = "0.4.19"
crossbeam-channel = "0.5"
ctrlc = "3.2.2"
lending-iterator = "0.1.5"
num-complex = "0.4"
num-traits = "0.2"
pcap = "0.9.2"
psrdada = "0.1"

[dev-dependencies]
criterion = "0.3"
rand = "0.8"

[profile]
[profile.release]
lto = true
panic = "abort"

[[bench]]
harness = false
name = "benches"
