[package]
edition = "2021"
name = "byte_slurper"
version = "0.1.0"

[dependencies]
byte-slice-cast = "1.2"
chrono = "0.4"
clap = { version = "3", features = ["derive"] }
clap-verbosity-flag = "1"
crossbeam-channel = "0.5"
lending-iterator = "0.1"
num-traits = "0.2"
pcap = "0.9"
psrdada = "0.1"
rtrb = "0.2"
tracing = "0.1"
tracing-subscriber = "0.3"
log = "0.4"

[dev-dependencies]
criterion = "0.3"
rand = "0.8"

[profile]
[profile.release]
lto = true
panic = "abort"

[[bench]]
harness = false
name = "benches"
