[package]
edition = "2021"
name = "byte_slurper"
version = "0.1.0"

[dependencies]
byte-slice-cast = "1.2"
chrono = "0.4"
clap = { version = "3", features = ["derive"] }
clap-verbosity-flag = "1"
crossbeam-channel = "0.5"
lending-iterator = "0.1"
num-traits = "0.2"
pcap = "0.9"
psrdada = "0.2"
rtrb = "0.2"
tracing = "0.1"
tracing-subscriber = "0.3"
log = "0.4"
ctrlc = "3.2"
sigproc_filterbank = "0.2"
hifitime = "3.6"
casperfpga = {version = "0.1", git = "https://github.com/kiranshila/casperfpga_rs"}

[dev-dependencies]
criterion = "0.3"
rand = "0.8"

[profile.release]
lto = true
debug = 1

[[bench]]
harness = false
name = "benches"
